--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "pyroll"
+name = "pyroll-cli"
 version = "2.0.0a1"
-description = "PyRoll rolling simulation framework - core library."
+description = "PyRoll rolling simulation framework - command line interface (CLI)."
 authors = [
     "Max Weiner <max.weiner@imf.tu-freiberg.de>",
     "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
@@ -13,8 +13,7 @@ homepage = "https://pyroll-project.github.io"
 repository = "https://github.com/pyroll-project/pyroll-core"
 documentation = "https://pyroll.readthedocs.io/en/latest"
 packages = [
-    { include = "pyroll/core" },
-    { include = "pyroll/ui" }
+    { include = "pyroll/cli" }
 ]
 readme = "README.md"
 classifiers = [
@@ -26,28 +25,20 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9, <4.0"
-matplotlib = "^3.5.0"
-numpy = "^1.21.4"
-scipy = "^1.8.0"
-Jinja2 = "^3.0.3"
+pyroll = "2.0.0a2"
+pyroll-report = "2.0.0a1"
+pyroll-export = "2.0.0a1"
 click = "^8.0.0"
 PyYAML = "^6.0"
-makefun = "^1.13.1"
-pluggy = "^1.0.0"
-pandas = "^1.4.1"
-lxml = "^4.7.1"
-Shapely = "^1.8.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+pyroll = { git = "ssh://git@github.com/pyroll-project/pyroll-core.git", branch = "remove_ui" }
+pyroll-export = { git = "ssh://git@github.com/pyroll-project/pyroll-export.git" }
+pyroll-report = { git = "ssh://git@github.com/pyroll-project/pyroll-report.git" }
 pytest = "^7.0.0"
-Sphinx = "^4.5.0"
-myst-parser = "^0.18.0"
-ipython = "^8.3.0"
-schemdraw = "^0.15"
-pytask = "^0.2.5"
 
 [tool.poetry.scripts]
-pyroll = 'pyroll.ui.cli:main'
+pyroll = 'pyroll.cli:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
