dep on pyroll-core

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,12 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9, <4.0"
-pyroll = "2.0.0a2"
+pyroll-core = "^2.0.0a"
 click = "^8.0.0"
 PyYAML = "^6.0"
 
 [tool.poetry.group.dev.dependencies]
-pyroll = { git = "ssh://git@github.com/pyroll-project/pyroll-core.git", branch = "remove_ui" }
+pyroll-core = { git = "ssh://git@github.com/pyroll-project/pyroll-core.git", branch = "remove_ui" }
 pytest = "^7.0.0"
 
 [tool.poetry.scripts]
