--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyroll-cli"
-version = "2.0.0a1"
+version = "2.0.0rc"
 description = "PyRoll rolling simulation framework - command line interface (CLI)."
 authors = [
     "Max Weiner <max.weiner@imf.tu-freiberg.de>",
@@ -25,7 +25,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9, <4.0"
-pyroll-core = "^2.0.0a"
+pyroll-core = "^2.0.0rc"
 click = "^8.0.0"
 PyYAML = "^6.0"
 
