--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,40 +1,50 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
 name = "pyroll-cli"
-version = "2.0.0rc"
 description = "PyRoll rolling simulation framework - command line interface (CLI)."
 authors = [
-    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
-    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
-    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
-    "Max Stirl <max.stirl@imf.tu-freiberg.de>"
+    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
+    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
+    { name = "Matthias Schmidtchen", email = "matthias.schmidtchen@imf.tu-freiberg.de" },
+    { name = "Max Stirl", email = "max.stirl@imf.tu-freiberg.de" },
 ]
 license = "BSD-3-Clause"
-homepage = "https://pyroll-project.github.io"
-repository = "https://github.com/pyroll-project/pyroll-core"
-documentation = "https://pyroll.readthedocs.io/en/latest"
-packages = [
-    { include = "pyroll/cli" }
-]
 readme = "README.md"
 classifiers = [
     "Intended Audience :: Science/Research",
     "Intended Audience :: Manufacturing",
     "Operating System :: OS Independent",
-    "Topic :: Scientific/Engineering"
+    "Topic :: Scientific/Engineering",
+    "License :: OSI Approved :: BSD License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Development Status :: 5 - Production/Stable",
+    "Framework :: Hatch",
+    "Framework :: IPython",
+    "Framework :: Jupyter",
+    "Framework :: Pytest",
+    "Framework :: Sphinx",
+    "Natural Language :: English",
+]
+requires-python = ">=3.9, <4.0"
+
+dependencies = [
+    "pyroll-core ~= 2.0.0rc",
+    "click ~= 8.0",
+    "PyYAML ~=6.0"
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.9, <4.0"
-pyroll-core = "^2.0.0rc"
-click = "^8.0.0"
-PyYAML = "^6.0"
+dynamic = ["version"]
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.0.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 pyroll = 'pyroll.cli.program:run_cli'
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[project.urls]
+Homepage = "https://pyroll-project.github.io"
+Repository = "https://github.com/pyroll-project/pyroll-cli"
+Documentation = "https://pyroll.readthedocs.io/en/latest/basic/cli.html"
