use jinja for config building

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
     "pyroll-core ~= 2.0.0rc",
     "click ~= 8.0",
     "PyYAML ~=6.0",
-    "rtoml ~= 0.9"
+    "rtoml ~= 0.9",
+    "jinja2 ~= 3.0",
 ]
 
 dynamic = ["version"]
