--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
 requires-python = ">=3.9, <4.0"
 
 dependencies = [
-    "pyroll-core ~= 2.0.0rc",
+    "pyroll-core ~= 2.0",
     "click ~= 8.0",
     "PyYAML ~=6.0",
     "rtoml ~= 0.9",
