--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "rtoml ~= 0.9",
     "jinja2 ~= 3.0",
     "rich ~= 13.0",
+    "click-repl ~= 0.2"
 ]
 
 dynamic = ["version"]
