--- a/pyroll/cli/res/config.toml
+++ b/pyroll/cli/res/config.toml
@@ -23,6 +23,10 @@ class = "rich.logging.RichHandler"
 level = "INFO"
 formatter = "console"
 markup = true
+rich_tracebacks = true
+tracebacks_suppress = [
+    "pyroll.core.hooks",
+]
 
 [logging.handlers.file]
 class = "logging.FileHandler"
