--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "click ~= 8.0",
     "rtoml ~= 0.9",
     "jinja2 ~= 3.0",
+    "rich ~= 13.0",
+    "click-repl ~= 0.2"
 ]
 
 dynamic = ["version"]
