--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ requires-python = ">=3.9"
 dependencies = [
     "pyroll-core ~= 2.0",
     "click ~= 8.0",
-    "rtoml ~= 0.9",
+    "tomli ~= 2.0",
+    "tomli-w ~= 1.0",
     "jinja2 ~= 3.0",
     "rich ~= 13.0",
     "click-repl ~= 0.2"
